<package format="2">
  <name>azureloong_control</name>
  <version>1.0.0</version>
  <description>
    <p>This package contains control codes for AzureLoong robot.</p>
  </description>
  <author>Qinghua Ma</author>
  <maintainer email="956473807@qq.com" />
  <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>genmsg</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>roslib</exec_depend>
</package>
